Update .gitignore, fix README typo, and add FNNDeepONet model implementation

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@ __pycache__/
 # Scratch files
 *.scratch.*
 
+# Data files
+data/
+*.png
+
+# MacOS
+.DS_Store
+
 # Distribution / packaging
 .Python
 build/
